--- a/sigma.css
+++ b/sigma.css
@@ -33,6 +33,6 @@ li a:hover:not(.active) {
 .active {
     background-color: #4CAF50;
 }
-div {
-  background-color: #FFFFFF;
+#intro {
+  color: #FFFFFF;
 }
