--- a/sigma.css
+++ b/sigma.css
@@ -34,6 +34,10 @@ li a {
 li a:hover:not(.active) {
     background-color: #111;
 }
+#btn {
+    color: black;
+    border-color: black;
+}
 .active {
     background-color: #4CAF50;
 }
