--- a/sigma.css
+++ b/sigma.css
@@ -1,20 +1,17 @@
-* {
-    font-family: "Times New Roman", Georgia, Serif;
+body {
+    background-color: #000000;
 }
 h1 {
-    text-decoration: underline;
-    text-transform: capitalize;
-}
-body {
-    background-color: #bfbfbf;
     text-align: center;
-}
-.blackBox {
-    background-color: black;
     color: white;
-    font-style: italic;
 }
-.navbar {
+h2 {
+    color: white;
+}
+p {
+    text-indent: 50px;
+}
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -24,26 +21,28 @@ body {
     top: 0;
     width: 100%;
 }
-.navbarItem {
+li {
     float: left;
-    font-size: 20px;
-    font-weight: 5px;
 }
-.navbarItem a {
+li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
-.navbarItem a:hover:not(.active) {
+li a:hover:not(.active) {
     background-color: #111;
+}
+#btn {
+    color: black;
+    border-color: black;
 }
 .active {
     background-color: #4CAF50;
 }
-.floatLeft {
-    text-align: left;
+#intro {
+  color: #FFFFFF;
 }
 .modal {
     display: none;
@@ -75,10 +74,4 @@ body {
     color: black;
     text-decoration: none;
     cursor: pointer;
-}
-a:link, a:visited, a:hover {
-    color:white;
-}
-a:visited {
-    color: green;
 }
