--- a/sigma.css
+++ b/sigma.css
@@ -45,7 +45,7 @@ li a:hover:not(.active) {
 }
 #gallery {
     background-color: #333;
-    color: blue;
+    color: #00ffff;
 }   
 .modal {
     display: none;
