--- a/sigma.css
+++ b/sigma.css
@@ -38,14 +38,13 @@ li a:hover:not(.active) {
     border-color: black;
 }
 .active {
-    background-color: #4CAF50;
+    background-color: #e60000;
 }
 #home {
   color: #FFFFFF;
 }
 #gallery {
     background-color: #333;
-    color: red;
 }   
 .modal {
     display: none;
