--- a/sigma.css
+++ b/sigma.css
@@ -44,7 +44,7 @@ li a:hover:not(.active) {
     background-color: #e60000;
     color: #000000;
 }   
-#about {
+#info {
     background-color: #333;
     color: #FFFFFF;
 }
