--- a/sigma.css
+++ b/sigma.css
@@ -49,6 +49,7 @@ li a:hover:not(.active) {
     background-color: #333;
     color: #FFFFFF;
     margin-bottom: -25px;
+    font-size: 20px;
 }
 .modal {
     display: none;
