--- a/sigma.css
+++ b/sigma.css
@@ -7,7 +7,7 @@ h1 {
 p {
     text-indent: 50px;
 }
-ul {
+.navtop {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -17,17 +17,17 @@ ul {
     top: 0;
     width: 100%;
 }
-li {
+.navbar {
     float: left;
 }
-li a {
+.navbar a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
-li a:hover:not(.active) {
+.navbar a:hover:not(.active) {
     background-color: #111;
 }
 #btn {
