--- a/sigma.css
+++ b/sigma.css
@@ -49,7 +49,12 @@ p {
 #info {
     background-color: #333;
     color: #FFFFFF;
+    margin-bottom: -25px;
     font-size: 20px;
+}
+#about {
+    color: #FFFFFF;
+    margin-bottom: -25px;
 }
 .modal {
     display: none;
